Update project with new tests and code coverage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,11 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'jacoco'
 }
-
+jacoco {
+    toolVersion = "0.8.7"
+}
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
@@ -25,6 +28,9 @@ dependencies {
     implementation libs.guava
     // Added a new line to dependency block -  Apache Commons Lang
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.12.4'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -42,6 +48,7 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
 }
 
 task showProjectInfo {
@@ -50,4 +57,25 @@ task showProjectInfo {
         println "Java Version: ${java.toolchain.languageVersion.get()}"
         println "Main Class: ${application.mainClass.get()}"
     }
+
+tasks.named('jacocoTestReport') {
+    dependsOn test
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
+}
+tasks.named('jacocoTestCoverageVerification') {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.5
+            }
+        }
+    }
+}
+tasks.named('check') {
+    dependsOn jacocoTestCoverageVerification
+}
 }
